--- a/src/css/style.css
+++ b/src/css/style.css
@@ -70,6 +70,10 @@ header nav {
 nav div {
     padding-bottom: 5px;
     border-bottom: 2px solid transparent;
+
+    /* make behaviour similar to button */
+    cursor: pointer; /* Makes the mouse icon a hand */
+    user-select: none; /* Optional: prevents accidental text selection */
 }
 
 nav div:hover {
@@ -101,7 +105,7 @@ main .name {
     font-size: 4.5rem;
     text-shadow: -1px 0px 22px rgba(0,0,0,0.99);
     color: rgb(126, 255, 141);
-    margin-top: -70px;
+    margin-top: -103px;
 }
 
 
@@ -179,4 +183,22 @@ main.menu .menu-item{
     background-color: var(--color-accent-green); /* or any color you prefer */
     width: 250px;  /* Adjust width as needed */
     margin: 5px auto;  /* Centers it and adds spacing */
+}
+
+/* About */
+
+main.about {
+    height: 100%;
+    display: grid;
+    align-content: start;
+    justify-items: center;
+    gap:30px;
+}
+
+main.about p {
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: 'Oxanium', sans-serif;
+    text-shadow: -2px 0px 22px rgba(0,0,0,1);
+    width: 70%;
 }
